--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
+environment:
+  matrix:
+    - RUBY_VERSION: "25"
+    - RUBY_VERSION: "25-x64"
+
 install:
-  - set PATH=C:\Ruby25\bin;%PATH%
+  - set PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
   - bundle install
 
 build: off
